# infinitegforums

./: .bazelignore  .bazelrc  .editorconfig  .eslintrc.json  .gitignore  .gitreview  .prettierrc.yaml  .swcrc_pkg  .swcrc_pkg_strict  .zuul.yaml  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  OWNERS  PACKAGE_MANAGER_OWNERS  README.md  REPO.bazel  background.js  bundle.bzl  code-owners.config  console_inject.js  console_inject_start.js  copy_pkg.bzl  defs.bzl  eslint.config.js  forum_inject.js  generateManifest.bash  generateManifest.go  go.mod  go.sum  groups  i18n-config.toml  jest.config.js  lit-localize.json  lit-localize.template.json  lit_localize.bzl  manifest.json  options.html  options.js  (+19 more)
docs/features/: BUILD.bazel  features.ar.md  features.ca.md  features.en.md  features.es.md  features.ja.md  features.ko.md  features.pt_BR.md  features.ru.md  features.vi.md
docs/features/bzl/: generate_features_docs.bzl
docs/features/generate/: BUILD.bazel  README  defs.bzl  main.ts  package.json  tsconfig.json  utils.ts
manifest/: BUILD.bazel  manifest.template.gjson  manifest_utils.sh  stamp_manifest.sh
src/: BUILD.bazel  background.js  bg.js  console_inject.js  console_inject_start.js  console_profileindicator_inject.css  console_profileindicator_inject.js  forum_inject.js  manifest.json  options.css  options.html  options.js  optionsCommon.js  profile_inject.js  sw.js  thread_inject.js
src/_locales/ca/: messages.json
src/_locales/en/: messages.json
src/_locales/es/: messages.json
src/_locales/ru/: OWNERS  messages.json
src/bg/: BUILD.bazel  bg.js  bg.pre.js  bg.pre.ts
src/ccDarkTheme/: main.scss
src/ccDarkTheme/abstracts/: _variables.scss
src/ccDarkTheme/components/: _canned-responses.scss  _drawer.scss  _icon.scss  _rich-text-editor.scss  _tabs.scss  _thread-composer.scss  _thread-list.scss  _thread-view.scss
src/ccDarkTheme/layout/: _header.scss  _index.scss
src/common/: BUILD.bazel  README.md  StylesheetManager.ts  TWBasicUtils.js  abortable.ts  actionApi.js  actionApi.pre.js  api.js  api.pre.js  api.pre.ts  api.ts  common.js  commonUtils.js  commonUtils.ts  communityConsoleUtils.js  console.css  consts.ts  contentScriptsUtils.js  contentScriptsUtils.ts  content_scripts.js  content_scripts_injections.js  csEventListener.js  cs_event_listener.js  extUtils.js  extUtils.pre.js  forum.css  litI18nUtils.js  optionsPermissions.js  optionsPrototype.json5  optionsPrototype.ts  optionsUtils.js  optionsWatcher.js  partialOptionsWatcher.js  protojs.js  protojs.test.mjs  protojs.test.ts  protojs.types.ts  specialOptions.json5  tooltip.js  xhrInterceptorUtils.js  (+1 more)
src/common/components/: BUILD.bazel  FormField.js
src/common/contentScriptFetch/: BUILD.bazel  fetch.pre.ts
src/common/dataStructures/: BUILD.bazel  queue.ts
src/common/mainWorldContentScriptBridge/: Client.js  Server.js
src/common/mainWorldI18n/: Client.js  Server.js
src/common/mainWorldOptionsWatcher/: Client.js  Server.js
src/common/nodeWatcher/: NodeWatcher.ts
src/common/options/: BUILD.bazel  Option.ts  OptionsConfiguration.test.ts  OptionsConfiguration.ts  OptionsProvider.ts  optionsPermissions.js  optionsPrototype.ts  optionsUtils.js  optionsUtils.pre.js  partialOptionsWatcher.js  specialOptions.json5  testUtils.ts
src/contentScripts/: BUILD.bazel  README.md  profile.js  profileIndicator.js  publicForum.js  publicGuide.js  publicGuideStart.js  publicProfile.js  publicProfileStart.js  publicThread.js  publicThreadStart.js
src/content_scripts/: console_inject.js  console_inject_start.js  profile_inject.js  profileindicator_inject.js  thread_inject.js
src/domain/: BUILD.bazel  forum.ts  threadProperty.ts
src/features/: Features.ts  README.md
src/icons/: BUILD.bazel
src/injections/: BUILD.bazel  README.md  batchLock.js  batchlock_inject.css  batchlock_inject.js  ccdarktheme.css  ccdarktheme_switch.css  console_profileindicator_inject.js  enhanced_announcements_dot.css  extraInfo.js  litComponentsInject.js  profileIndicator.js  profileindicator_inject.css  profileindicator_inject.js  thread_list_avatars.css  updateHandlerLitComponents.js  workflowComponentsInject.js  xhrInterceptor.js  xhrProxy.js
src/killSwitch/: BUILD.bazel  README.md  config.bzl  config.template.js  index.js  index.pre.js  internalKillSwitchWatcher.js
src/lit-locales/: BUILD.bazel  defs.bzl  target_locales.bzl
src/md3/: theme.scss
src/mdc/: styles.scss
src/models/: BUILD.bazel  Gap.js  Message.js  Message.ts  README.md  StartupData.js  Thread.js  Thread.ts  User.js
src/options/: bgHandler.js  experiments.html  experiments_bit.js  options.css  options.html  options.js  optionsCommon.js  optionsPage.json5  options_common.js
src/redirect/: index.js  setup.js
src/scripts/: Scripts.ts
src/static/: BUILD.bazel
src/storage/: README.md
src/updateNotifier/: BUILD.bazel  index.js
src/workflows/: common.js  workflowsStorage.js
src/xhrInterceptor/: MessageIdTracker.ts  README  ResponseModifier.adapter.ts  ResponseModifier.port.ts  ResponseModifier.ts  XHRProxy.js  killSwitchHandler.js  utils.js
tools/: BUILD.bazel  OWNERS  bazel_stamp_vars.sh  common_js_project.bzl  common_ts_project.bzl  copy_pkg_to_writeable_dir.sh  generateManifest.go  generateManifest_test.go  preset.bazelrc  printOptionsPrototypeJSON.ts  release.bash  release_utils.sh  release_utils.test.sh  static_styles.bzl  static_styles_provider.bzl  tools.go
tools/bazel/: jq_binary.bzl  js_proto.bzl  swc.bzl
tools/preprocessor/: BUILD.bazel  README.md  main.go  preprocessor.go  preprocessor_test.go  queryparser.go  satisfiable.go
tools/printOptionsPrototypeJSON/: BUILD.bazel  package.json  printOptionsPrototypeJSON.ts  smoke_test.sh  tsconfig.json
tools/stampVersionName/: BUILD.bazel  stamp_version_name.sh
tools/syncTranslations/: .gitignore  BUILD.bazel  README.md  ccTranslationsParser.ts  config.ts  package.json  syncTranslations.ts  translationsWriter.ts  tsconfig.json
tools/testdata/: manifest_frozen_chromium_expected.json  manifest_frozen_gecko_expected.json  manifest_small1.gjson  manifest_small1_expected.json
(+1204 files in other folders)
