bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "2.8.3")
bazel_dep(name = "aspect_rules_swc", version = "2.6.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.1")
bazel_dep(name = "aspect_rules_webpack", version = "0.17.1")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")
bazel_dep(name = "fremtind_rules_vitest", version = "0.2.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "gzgz_rules_sass", version = "1.0.4")
bazel_dep(name = "jq.bzl", version = "0.4.0")
bazel_dep(name = "protobuf", version = "33.2")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_nodejs", version = "6.6.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_proto_grpc_doc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_js", version = "5.8.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

single_version_override(
    module_name = "rules_pkg",
    patches = ["//tools:bazel/patches/rules_pkg_build_zip.patch"],
    patch_strip = 1,
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "24.11.1")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    generate_bzl_library_targets = True,
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# TODO: delete the following version override when updating aspect_rules_js to v4
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "9.15.9",
    pnpm_version_integrity = "sha512-aARhQYk8ZvrQHAeSMRKOmvuJ74fiaR1p5NQO7iKJiClf1GghgbrlW1hBjDolO95lpQXsfF+UA+zlzDzTfc8lMQ==",
)

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /path/to/infinitegforums install
use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_integrity = "sha512-jl1vZzPDinLr9eUt3J/t7V6FgNEw9QjvBPdysz9KfQDD41fQrC2Y4vKQdiaUpFT4bXlb1RHhLpp8wtm6M5TgSw==",
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_avm99963_gomodules_webext")

sass = use_extension("@gzgz_rules_sass//sass:extensions.bzl", "sass")
sass.toolchain(sass_version = "1.89.1")  # TODO: autoupdate this version with Renovate
use_repo(sass, "sass_toolchains")

register_toolchains("@sass_toolchains//:all")
