load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_library")

package_group(
    name = "entrypoint",
    packages = [
    ],
)

package_group(
    name = "presentation",
    packages = [
        "//src/features/autoRefresh/presentation/...",
        "//src/features/bulkMove/presentation/...",
        "//src/presentation/...",
    ],
)

package_group(
    name = "ui",
    packages = [
        "//src/features/bulkMove/infrastructure/ui/...",
        "//src/features/bulkMove/ui/...",
        "//src/features/flattenThreads/ui/...",
        "//src/infrastructure/ui/...",
        "//src/ui/...",
    ],
)

package_group(
    name = "infrastructure_presentation",
    packages = [
        "//src/infrastructure/presentation/...",
    ],
)

package_group(
    name = "infrastructure_repositories",
    packages = [
        "//src/options/infrastructure/repositories/...",
    ],
)

package_group(
    name = "infrastructure_services",
    packages = [
        "//src/infrastructure/services/...",
        "//src/infrastructure/ui/services/...",
    ],
)

package_group(
    name = "core",
    packages = [],
)

# Source code which is part of the src package, and hasn't yet been added to a
# package built with common_ts_project in Bazel.
#
# TODO(https://iavm.xyz/b/twpowertools/256): this shouldn't include code
# anymore. Remove it.
copy_to_bin(
    name = "non_packaged_source",
    srcs = glob(
        ["**"],
        exclude = ["BUILD.bazel"],
    ),
)

filegroup(
    name = "non_compiled_source",
    srcs = [
        ":non_packaged_source",
        # keep-sorted start
        "//src/common/architecture/dependenciesProvider",
        # keep-sorted end
    ],
    visibility = [
        "//:__pkg__",
        "//src/lit-locales:__subpackages__",
    ],
)

# This includes all the JS libraries from packages compiled with
# common_ts_project in Bazel. It is helpful to group them since we want to make
# all these libraries available to Webpack, since ts-loader compiles the source
# code included in :non_packaged_source, which may depend on these libraries.
#
# TODO(https://iavm.xyz/b/twpowertools/256): this shouldn't be needed anymore.
# Remove it.
js_library(
    name = "compiled_source",
    visibility = ["//:__pkg__"],
    deps = [
        # keep-sorted start
        "//src/common",
        "//src/common/architecture/abortable",
        "//src/common/architecture/scripts",
        "//src/common/architecture/scripts/stylesheet",
        "//src/common/components",
        "//src/common/dataStructures",
        "//src/common/options",
        "//src/common/protojs",
        "//src/common/styles",
        "//src/contentScripts/communityConsole/utils",
        "//src/domain",
        "//src/features/autoRefresh/core",
        "//src/features/autoRefresh/presentation/nodeWatcherHandlers",
        "//src/features/autoRefresh/presentation/options",
        "//src/features/autoRefresh/presentation/scripts",
        "//src/features/bulkMove/infrastructure/factories",
        "//src/features/bulkMove/infrastructure/repositories/api",
        "//src/features/bulkMove/infrastructure/ui/injectors",
        "//src/features/bulkMove/presentation/nodeWatchHandlers",
        "//src/features/bulkMove/presentation/options",
        "//src/features/bulkMove/ui/components",
        "//src/features/bulkMove/ui/injectors",
        "//src/features/bulkMove/ui/ports",
        "//src/features/flattenThreads/ui/components",
        "//src/infrastructure/presentation/nodeWatcher",
        "//src/infrastructure/presentation/nodeWatcher/handlers",
        "//src/infrastructure/presentation/scripts",
        "//src/infrastructure/services/communityConsole",
        "//src/infrastructure/services/options",
        "//src/infrastructure/ui/injectors/communityConsole",
        "//src/infrastructure/ui/services/communityConsole",
        "//src/killSwitch",
        "//src/lit-locales",
        "//src/models",
        "//src/models/enums",
        "//src/options/infrastructure/repositories",
        "//src/options/presentation/models",
        "//src/options/presentation/utils",
        "//src/options/repositories",
        "//src/presentation/i18n",
        "//src/presentation/mainWorldContentScriptBridge/base",
        "//src/presentation/mainWorldContentScriptBridge/base/tests",
        "//src/presentation/mainWorldContentScriptBridge/i18n",
        "//src/presentation/mainWorldContentScriptBridge/optionsConfigurationRepository",
        "//src/presentation/mainWorldContentScriptBridge/optionsWatcher",
        "//src/presentation/nodeWatcher",
        "//src/presentation/scripts",
        "//src/presentation/scripts/errors",
        "//src/presentation/standaloneScripts/litComponents",
        "//src/services/communityConsole",
        "//src/services/options",
        "//src/ui/components",
        "//src/ui/components/forumDestinationPicker",
        "//src/ui/errors",
        "//src/ui/i18n",
        "//src/ui/injectors",
        "//src/ui/services",
        # keep-sorted end
    ],
)
