load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_library")

package_group(
    name = "entrypoint",
    packages = [
    ],
)

package_group(
    name = "presentation",
    packages = [
        "//src/features/autoRefresh/presentation/...",
        "//src/features/avatars/presentation/...",
        "//src/features/batchLock/presentation/...",
        "//src/features/blockDrafts/presentation/...",
        "//src/features/bulkMove/presentation/...",
        "//src/features/bulkReportReplies/presentation/...",
        "//src/features/ccDarkTheme/presentation/...",
        "//src/features/ccDragAndDropFix/presentation/...",
        "//src/features/ccForceHideDrawer/presentation/...",
        "//src/features/enhancedAnnouncementsDot/presentation/...",
        "//src/features/extraInfo/presentation/...",
        "//src/features/fixedToolbar/presentation/...",
        "//src/features/flattenThreads/core",
        "//src/features/flattenThreads/presentation/...",
        "//src/features/flattenThreads/ui/components",
        "//src/features/imageMaxHeight/presentation/...",
        "//src/features/increaseContrast/presentation/...",
        "//src/features/infiniteScroll/presentation/...",
        "//src/features/interopThreadPage/presentation/...",
        "//src/features/linkDialogFix/presentation/...",
        "//src/features/loadDrafts/presentation/...",
        "//src/features/previousPosts/presentation/...",
        "//src/features/profileIndicator/presentation/...",
        "//src/features/redirect/presentation/...",
        "//src/features/repositionExpandThread/presentation/...",
        "//src/features/stickySidebarHeaders/presentation/...",
        "//src/features/uiSpacing/presentation/...",
        "//src/presentation/...",
    ],
)

package_group(
    name = "ui",
    packages = [
        "//src/features/batchLock/infrastructure/ui/...",
        "//src/features/batchLock/ui/...",
        "//src/features/bulkMove/infrastructure/ui/...",
        "//src/features/bulkMove/ui/...",
        "//src/features/bulkReportReplies/infrastructure/ui/...",
        "//src/features/bulkReportReplies/ui/...",
        "//src/features/ccDarkTheme/ui/...",
        "//src/features/flattenThreads/ui/...",
        "//src/infrastructure/ui/...",
        "//src/ui/...",
    ],
)

package_group(
    name = "infrastructure_presentation",
    packages = [
        "//src/infrastructure/presentation/...",
    ],
)

package_group(
    name = "infrastructure_repositories",
    packages = [
        "//src/options/infrastructure/repositories/...",
    ],
)

package_group(
    name = "infrastructure_services",
    packages = [
        "//src/infrastructure/services/...",
        "//src/infrastructure/ui/services/...",
    ],
)

package_group(
    name = "core",
    packages = [],
)

# Source code which is part of the src package, and hasn't yet been added to a
# package built with common_ts_project in Bazel.
#
# TODO(https://iavm.xyz/b/twpowertools/256): this shouldn't include code
# anymore. Remove it.
copy_to_bin(
    name = "non_packaged_source",
    srcs = glob(
        ["**"],
        exclude = ["BUILD.bazel"],
    ),
)

filegroup(
    name = "non_compiled_source",
    srcs = [
        ":non_packaged_source",
        # keep-sorted start
        "//src/common/architecture/dependenciesProvider",
        # keep-sorted end
    ],
    visibility = [
        "//:__pkg__",
        "//src/lit-locales:__subpackages__",
    ],
)

# This includes all the JS libraries from packages compiled with
# common_ts_project in Bazel. It is helpful to group them since we want to make
# all these libraries available to Webpack, since ts-loader compiles the source
# code included in :non_packaged_source, which may depend on these libraries.
#
# TODO(https://iavm.xyz/b/twpowertools/256): this shouldn't be needed anymore.
# Remove it.
js_library(
    name = "compiled_source",
    visibility = ["//:__pkg__"],
    deps = [
        "//src/common",
        "//src/common/architecture/abortable",
        "//src/common/architecture/scripts",
        "//src/common/architecture/scripts/stylesheet",
        "//src/common/components",
        "//src/common/dataStructures",
        "//src/common/options",
        "//src/common/protojs",
        "//src/common/styles",
        "//src/contentScripts/communityConsole/utils",
        "//src/contentScripts/utilsCommon",
        "//src/domain",
        "//src/features/autoRefresh/core",
        "//src/features/autoRefresh/presentation/nodeWatcherHandlers",
        "//src/features/autoRefresh/presentation/options",
        "//src/features/autoRefresh/presentation/scripts",
        "//src/features/avatars/core",
        "//src/features/avatars/presentation/nodeWatcherHandlers",
        "//src/features/avatars/presentation/options",
        "//src/features/avatars/presentation/scripts",
        "//src/features/batchLock/infrastructure/ui/injectors",
        "//src/features/batchLock/presentation/nodeWatcherHandlers",
        "//src/features/batchLock/presentation/options",
        "//src/features/batchLock/presentation/scripts",
        "//src/features/batchLock/ui/injectors",
        "//src/features/blockDrafts/presentation/options",
        "//src/features/bulkMove/infrastructure/factories",
        "//src/features/bulkMove/infrastructure/repositories/api",
        "//src/features/bulkMove/infrastructure/ui/injectors",
        "//src/features/bulkMove/presentation/nodeWatchHandlers",
        "//src/features/bulkMove/presentation/options",
        "//src/features/bulkMove/ui/components",
        "//src/features/bulkMove/ui/injectors",
        "//src/features/bulkMove/ui/ports",
        "//src/features/bulkReportReplies/domain",
        "//src/features/bulkReportReplies/infrastructure/repositories/api/reportAbuse",
        "//src/features/bulkReportReplies/infrastructure/repositories/api/reportOffTopic",
        "//src/features/bulkReportReplies/infrastructure/repositories/messageInfo",
        "//src/features/bulkReportReplies/infrastructure/ui/injectors",
        "//src/features/bulkReportReplies/presentation/consts",
        "//src/features/bulkReportReplies/presentation/nodeWatcherHandlers",
        "//src/features/bulkReportReplies/presentation/options",
        "//src/features/bulkReportReplies/presentation/scripts",
        "//src/features/bulkReportReplies/services",
        "//src/features/bulkReportReplies/ui/components",
        "//src/features/bulkReportReplies/ui/events",
        "//src/features/bulkReportReplies/ui/injectors",
        "//src/features/ccDarkTheme/core/logic",
        "//src/features/ccDarkTheme/presentation/nodeWatcherHandlers",
        "//src/features/ccDarkTheme/presentation/options",
        "//src/features/ccDarkTheme/presentation/scripts",
        "//src/features/ccDragAndDropFix/presentation/nodeWatcherHandlers",
        "//src/features/ccDragAndDropFix/presentation/options",
        "//src/features/ccForceHideDrawer/presentation/options",
        "//src/features/ccForceHideDrawer/presentation/scripts",
        "//src/features/enhancedAnnouncementsDot/presentation/options",
        "//src/features/enhancedAnnouncementsDot/presentation/scripts",
        "//src/features/extraInfo/core",
        "//src/features/extraInfo/presentation/nodeWatcherHandlers/profile",
        "//src/features/extraInfo/presentation/nodeWatcherHandlers/thread",
        "//src/features/extraInfo/presentation/nodeWatcherHandlers/threadList",
        "//src/features/extraInfo/presentation/options",
        "//src/features/extraInfo/presentation/scripts",
        "//src/features/fixedToolbar/presentation/options",
        "//src/features/fixedToolbar/presentation/scripts",
        "//src/features/flattenThreads/core",
        "//src/features/flattenThreads/presentation/nodeWatcherHandlers",
        "//src/features/flattenThreads/presentation/options",
        "//src/features/flattenThreads/presentation/scripts",
        "//src/features/flattenThreads/ui/components",
        "//src/features/imageMaxHeight/presentation/options",
        "//src/features/imageMaxHeight/presentation/scripts",
        "//src/features/increaseContrast/presentation/options",
        "//src/features/increaseContrast/presentation/scripts",
        "//src/features/infiniteScroll/core",
        "//src/features/infiniteScroll/presentation/nodeWatcherHandlers",
        "//src/features/infiniteScroll/presentation/options",
        "//src/features/interopThreadPage/presentation/options",
        "//src/features/interopThreadPage/presentation/scripts",
        "//src/features/linkDialogFix/presentation/nodeWatcherHandlers",
        "//src/features/linkDialogFix/presentation/options",
        "//src/features/loadDrafts/presentation/options",
        "//src/features/loadDrafts/presentation/scripts",
        "//src/features/previousPosts/presentation/handlers",
        "//src/features/previousPosts/presentation/options",
        "//src/features/profileIndicator/presentation/options",
        "//src/features/redirect/presentation/options",
        "//src/features/repositionExpandThread/presentation/options",
        "//src/features/repositionExpandThread/presentation/scripts",
        "//src/features/stickySidebarHeaders/presentation/options",
        "//src/features/stickySidebarHeaders/presentation/scripts",
        "//src/features/uiSpacing/presentation/options",
        "//src/features/uiSpacing/presentation/scripts",
        "//src/infrastructure/presentation/nodeWatcher",
        "//src/infrastructure/presentation/nodeWatcher/handlers",
        "//src/infrastructure/presentation/scripts",
        "//src/infrastructure/services/communityConsole",
        "//src/infrastructure/services/options",
        "//src/infrastructure/ui/injectors/communityConsole",
        "//src/infrastructure/ui/services/communityConsole",
        "//src/killSwitch",
        "//src/lit-locales",
        "//src/models",
        "//src/models/enums",
        "//src/options/infrastructure/repositories",
        "//src/options/presentation/models",
        "//src/options/presentation/utils",
        "//src/options/repositories",
        "//src/presentation/i18n",
        "//src/presentation/mainWorldContentScriptBridge/base",
        "//src/presentation/mainWorldContentScriptBridge/base/tests",
        "//src/presentation/mainWorldContentScriptBridge/i18n",
        "//src/presentation/mainWorldContentScriptBridge/optionsConfigurationRepository",
        "//src/presentation/mainWorldContentScriptBridge/optionsWatcher",
        "//src/presentation/nodeWatcher",
        "//src/presentation/scripts",
        "//src/presentation/scripts/errors",
        "//src/presentation/standaloneScripts/litComponents",
        "//src/presentation/standaloneScripts/mainWorldServers",
        "//src/presentation/standaloneScripts/startupDataStorage",
        "//src/presentation/standaloneScripts/xhrInterceptor",
        "//src/services/communityConsole",
        "//src/services/options",
        "//src/ui/components",
        "//src/ui/components/forumDestinationPicker",
        "//src/ui/errors",
        "//src/ui/i18n",
        "//src/ui/injectors",
        "//src/ui/services",
        "//src/ui/styles/mdc",
        "//src/updateNotifier",
        "//src/xhrInterceptor/fetchProxy",
        "//src/xhrInterceptor/interceptors",
        "//src/xhrInterceptor/killSwitchHandler",
        "//src/xhrInterceptor/messageIdTracker",
        "//src/xhrInterceptor/responseModifier",
        "//src/xhrInterceptor/responseModifiers",
        "//src/xhrInterceptor/xhrProxy",
    ],
)
